feat: handle null

--- a/mod01/ex01/Makefile
+++ b/mod01/ex01/Makefile
@@ -1,6 +1,6 @@
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address,undefined
-TARGET = zoombie
+TARGET = zoombieHorde
 SRC = $(wildcard *.cpp)
 OBJ = $(SRC:.cpp=.o)
 
