refactor: replace std::cout with DEBUG_PRINT for logging in AMateria, Character, and related classes

--- a/mod04/ex03/Makefile
+++ b/mod04/ex03/Makefile
@@ -4,10 +4,12 @@ TARGET = main
 SRC = $(wildcard *.cpp)
 OBJ = $(SRC:.cpp=.o)
 
+DEBUG ?= 0
+
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJ)
+	$(CXX) $(CXXFLAGS) -DDEBUG=$(DEBUG) -o $(TARGET) $(OBJ)
 
 clean:
 	rm -f $(OBJ)
@@ -17,5 +19,8 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: clean
+debug:
+	$(MAKE) DEBUG=1
+
+.PHONY: clean debug
 .SECONDARY: $(OBJ)
